--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
+  "main": "./App.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
