--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-progress-bar-plus": "^1.3.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^3.4.4",
+    "react-spring": "^9.7.3",
     "web-vitals": "^2.1.4"
   },
   "main": "./App.js",
