--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@firebase/storage": "^0.12.2",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.17.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "firebase": "^10.8.1",
     "fuse.js": "^7.0.0",
     "react": "^18.2.0",
@@ -17,6 +20,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "^3.4.4",
     "react-spring": "^9.7.3",
+    "react-webcam": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
   "main": "./App.js",
