--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.3"
+    "canvas": "^2.11.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "firebase": "^10.9.0",
+    "firebase-admin": "^12.0.0",
+    "router": "^1.3.8"
   }
 }
