--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@firebase/storage": "^0.12.2",
+    "@mui/material": "^5.15.14",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.17.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +15,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.8.1",
     "fuse.js": "^7.0.0",
+    "material-ui-dropzone": "^3.5.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
