--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies on frontend
-        run: cd frontend && npm install --lagacy-peer-deps
+        run: cd frontend && npm install --force
       - name: Build
         run: cd frontend npm run build --if-present
       - name: Install dependencies on backend
