--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Install dependencies on backend
         run: cd backend && npm install
       - name: Build
-        run: cd backend npm && run build --if-present
+        run: cd backend && npm run build --if-present
 
